# NotionAiAssistant

./: .env.development  .flake8  .gitignore  CONTRIBUTORS.md  LICENSE  Makefile  README-pt.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  mypy.ini  requirements-dev.txt  setup.cfg
app/: Dockerfile  Dockerfile.dev  __init__.py  pyproject.toml  requirements.txt  start-services.sh  wait-for-postgres.sh
app/.streamlit/: config.toml
app/backend/: .gitignore  auth.py  config.py  create_admin.py  environment.py  main.py  models.py  requirements.txt  schemas.py  temp_api.py
app/backend/config/: api_config.py
app/backend/migrations/: __init__.py  add_deepseek_columns.py
app/backend/services/: __init__.py  ai_provider_factory.py  anthropic_service.py  content_generation_service.py  deepseek_service.py  formatter.py  notion_service.py  openai_service.py  prompts.py  provider_interface.py
app/backend/tests/: test_deepseek_provider.py
app/frontend/: .gitignore  api_config.py  api_connection.py  main.py  styles.css
app/scripts/: init-with-secrets.sh  load-secrets.sh  start-services.sh
app/shared/: .gitignore  __init__.py
app/tests/: __init__.py  conftest.py  test_basic.py
config/: .gitignore  local-env.conf.example
docs-public/: README-en.md  README-pt.md
postgres-init/: 00_init_db.sh  01_init_users.sql
scripts/: automated-deploy-dev.sh  automated-deploy.sh  backup-database.sh  backup.sh  detect-environment.sh  dev-postgres-helper.sh  health_check.sh  monitor.sh  restore.sh  safe-cleanup.sh  secure-env-management.sh  security_check.sh  (+2 more)
(+43 files in other folders)
